--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #000000;
+    background: rgb(185,92,92);
+    background: linear-gradient(138deg, rgba(185,92,92,1) 0%, rgba(121,47,134,1) 46%, rgba(59,43,140,1) 98%, rgba(155,69,252,1) 100%);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,6 +8,25 @@ body {
     width: 100vw;
     margin: 0;
     padding: 0;
+    background-repeat: no-repeat;
+    font-family: "Inter UI","SF Pro Display",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+    overflow-x: hidden;
+}
+
+header {
+    height: 200px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+}
+
+a {
+    color: white;
 }
 
 .game {
@@ -19,8 +39,8 @@ body {
 }
 
 .box {
-    height: 25px;
-    width: 25px;
+    height: 35px;
+    width: 35px;
     background-color: white;
     border: 1px solid #000000;
     transition: all 0.5s;
@@ -94,5 +114,15 @@ button:hover {
     width: 75%;
     height: fit-content;
     margin-top: 25px;
+}
+
+footer {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    padding: 50px;
 }
 
